# longevityscraper

./: .gitignore  .replit  README.md  REPLIT_SETUP.md  app.py  basic_app.py  config.py  free_summarizer.py  install_dependencies.py  main.py  next.config.js  pyproject.toml  render.yaml  requirements.txt  scraper.py  setup_replit.py  simple.py  simple_app.py  simple_flask.py  summarizer.py  test_app.py  test_dashboard.html  vercel.json  working_app.py
LandingPage/app/: page.tsx
Newest_landing_page/app/: page.tsx
app/: layout.tsx
app/properties/: page.tsx
components/: Navigation.tsx  PropertyCard.tsx  PropertySearch.tsx
templates/: dashboard.html  sources.html
